dbeaver/pro#3661 Fix after review